--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,11 @@
     <string name="language">Language</string>
     <string name="language_summary">Choose language</string>
 
+    <string name="location_disabled">Location disabled</string>
+    <string name="location_dialog_message">Do you want enabled GPS?</string>
+    <string name="location_bnt_yes">Yes</string>
+    <string name="location_bnt_no">No</string>
+
 
 
 </resources>
