#9 Location_Service (Timer)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="play_btn">play</string>
     <string name="myLocation">MyLocation</string>
 
+    <string name="tvTime">Time:</string>
+
 
 </resources>
