--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,8 @@
     <string name="save_dialog_btn">Save</string>
     <string name="cancel_dialog_btn">Cancel</string>
     <string name="time_00_24_24_fake">Time: 00:00:00</string>
-    <string name="average_velosity_3_5_km_h_fake">Average velosity: 0.0 kmh</string>
-    <string name="velosity_3_5km_h_fake">Velosity: 0.0 km/h</string>
+    <string name="average_velocity_3_5_km_h_fake">Average velocity: 0.0 km/h</string>
+    <string name="velocity_3_5km_h_fake">Velocity: 0.0 km/h</string>
     <string name="distance_16_5_km_fake">Distance: 0.0 km</string>
     <string name="fragment_settings_fake">FRAGMENT SETTINGS</string>
     <string name="fragment_tracks_fake">FRAGMENT TRACKS</string>
