--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="update_time">Update Time</string>
     <string name="update_time_summary">Location update time </string>
 
-    <string name="location">Location</string>
+    <string name="location">LOCATION</string>
 
     <string name="truck_color">Track color</string>
     <string name="truck_color_summary">Choose track color</string>
@@ -32,13 +32,12 @@
     <string name="distance_dialog">Distance:</string>
     <string name="save_dialog_btn">Save</string>
     <string name="cancel_dialog_btn">Cancel</string>
-    <string name="time_00_24_24_fake">Time: 00:24:24</string>
-    <string name="average_velosity_3_5_km_h_fake">Average velosity: 3.5 kmh</string>
-    <string name="velosity_3_5km_h_fake">Velosity: 3.5 km/h</string>
-    <string name="distance_16_5_km_fake">Distance: 16.5 km</string>
+    <string name="time_00_24_24_fake">Time: 00:00:00</string>
+    <string name="average_velosity_3_5_km_h_fake">Average velosity: 0.0 kmh</string>
+    <string name="velosity_3_5km_h_fake">Velosity: 0.0 km/h</string>
+    <string name="distance_16_5_km_fake">Distance: 0.0 km</string>
     <string name="fragment_settings_fake">FRAGMENT SETTINGS</string>
     <string name="fragment_tracks_fake">FRAGMENT TRACKS</string>
     <string name="fragment_view_track_fake">FRAGMENT VIEW TRACK</string>
-
 
 </resources>
