--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="update_time">Update Time</string>
     <string name="update_time_summary">Location update time </string>
 
-    <string name="location">LOCATION</string>
+    <string name="location">LOCATION SETTINGS</string>
 
     <string name="truck_color">Track color</string>
     <string name="truck_color_summary">Choose track color</string>
