Fix bug - Toast

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Fit Li Route GPS</string>
 
     //MainActivity
@@ -26,19 +25,13 @@
     <string name="myLocation">MyLocation</string>
 
     //Dialog
-    <string name="velocity_dialog">Velocity:</string>
-    <string name="distance_dialog">Distance:</string>
+    <string name="velocity_dialog">Velocity: </string>
+    <string name="distance_dialog">Distance: </string>
     <string name="save_dialog_btn">Save</string>
     <string name="cancel_dialog_btn">Cancel</string>
     <string name="save_this_track_dialog">Save this track?</string>
-    <string name="time_dialog">Time:</string>
+    <string name="time_dialog">Time: </string>
 
-    <string name="empty">EMPTY</string>
-    <string name="speed">Speed</string>
-    <string name="timer_des">timer_des</string>
-    <string name="delete">delete</string>
-
-    //MainFragment
     //MainFragment
     <string name="tvTime">Time:</string>
     <string name="avVelocityLabel">Average velosity:</string>
@@ -46,15 +39,24 @@
     <string name="distanceLabel">Distance:</string>
 
     //TrackItem
-    <string name="ti_date">Date: 26.06.2023</string>
+    <string name="ti_date">Date:</string>
     <string name="ti_distance">Distance:</string>
     <string name="ti_speed">Speed:</string>
     <string name="ti_time">Time:</string>
+    <string name="ti_desc_speed">ti_desc_speed</string>
+    <string name="ti_desc_timer">ti_desc_timer</string>
+    <string name="ti_desc_ic_delete">ti_desc_ic_delete</string>
 
     //FragmentViewTrack
     <string name="fvt_average_velosity">Average Velosity:</string>
     <string name="fvt_time">Time:</string>
     <string name="fvt_distance">Distance:</string>
-    <string name="fvt_date">Date: 26.06.2023</string>
+    <string name="fvt_date">Date:</string>
+
+    //FragmentTrack
+    <string name="ft_txt_emty">Empty</string>
+    <string name="show_track_saved">Track Saved!</string>
+    <string name="show_gps_enabled">GPS Enabled!</string>
+    <string name="show_loc_not_accessed">Location not accessed!</string>
 
 </resources>
